<resources>
    <string name="app_name">Cognizantapp</string>
    <string name="enter_name">enter name</string>
    <string name="enter_password">enter password</string>
    <string name="login">login</string>
    <string name="cancel">cancel</string>
    <string name="enter_contact_info">Enter contact info</string>
    <string name="send_contact">Send Contact</string>
    <string name="contact">Contact</string>
    <string name="click_me">Click me</string>
</resources>